k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-microservice
spec:
  replicas: 2   # mínimo 2 para load balancing
  selector:
    matchLabels:
      app: devops-microservice
  template:
    metadata:
      labels:
        app: devops-microservice
    spec:
      containers:
        - name: devops-microservice
          image: devopsregistryhenry.azurecr.io/devops-microservice:latest
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /DevOps
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /DevOps
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
      imagePullSecrets:
        - name: acr-auth
