k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-service
spec:
  selector:
    app: devops-microservice
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80      # expuesto al exterior
      targetPort: 8000  # puerto del container
