k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - devops-app.yourdomain.com
      secretName: devops-tls-secret  # secreto TLS previamente creado
  rules:
    - host: devops-app.yourdomain.com
      http:
        paths:
          - path: /DevOps
            pathType: Prefix
            backend:
              service:
                name: devops-service
                port:
                  number: 80
